--- a/RTSFramework/RTSFramework.GUI/MainWindow.xaml
+++ b/RTSFramework/RTSFramework.GUI/MainWindow.xaml
@@ -75,15 +75,35 @@
 		<DataGrid x:Name="DgTests" IsReadOnly="True" AutoGenerateColumns="False" Margin="5,0,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" ItemsSource="{Binding TestResults}"
 				  ScrollViewer.CanContentScroll="True" 
 				  ScrollViewer.VerticalScrollBarVisibility="Auto"
-				  ScrollViewer.HorizontalScrollBarVisibility="Auto">
+				  ScrollViewer.HorizontalScrollBarVisibility="Auto"
+				  RowDetailsVisibilityMode="Collapsed">
+
 			<DataGrid.ItemContainerStyle >
 				<Style TargetType="DataGridRow" >
 					<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
 					<Setter Property="behaviors:HandleDoubleClickBehavior.Command" Value="{Binding ShowErrorMessageCommand}" />
 				</Style>
 			</DataGrid.ItemContainerStyle>
-			
+
+			<DataGrid.RowDetailsTemplate>
+				<DataTemplate  DataType="viewModels:TestResultListViewItemViewModel">
+					<Border BorderThickness="2,0,0,0" Margin="30,0,0,0" BorderBrush="Black">
+						<StackPanel>
+							<TextBlock Text="{Binding ErrorMessage}" />
+							<TextBlock Text="{Binding StackTrace}" />
+						</StackPanel>
+					</Border>
+				</DataTemplate>
+			</DataGrid.RowDetailsTemplate>
+
 			<DataGrid.Columns>
+				<DataGridTemplateColumn>
+					<DataGridTemplateColumn.CellTemplate>
+						<DataTemplate DataType="viewModels:TestResultListViewItemViewModel">
+							<Button Click="ShowHideDetails" Visibility="{Binding HasChildResults, Converter={converters:VisibilityConverter}}" >Details</Button>
+						</DataTemplate>
+					</DataGridTemplateColumn.CellTemplate>
+				</DataGridTemplateColumn>
 				<DataGridTextColumn Width="150" Header="Class Name" Binding="{Binding FullClassName}" />
 				<DataGridTextColumn Width="100" Header="Test Case Name" Binding="{Binding Name}" />
 				<DataGridTemplateColumn Width="100" Header ="Outcome">
